--- a/package/gcdnet2/NAMESPACE
+++ b/package/gcdnet2/NAMESPACE
@@ -1,7 +1,7 @@
 useDynLib(gcdnet2, .registration = TRUE)
 
-export(gcdnet,
-cv.gcdnet,
+export(gcdnet, lla.gcdnet,
+cv.gcdnet, cv.lla.gcdnet,
 cv.hsvmpath,
 cv.logitpath,
 cv.sqsvmpath,
@@ -24,7 +24,9 @@ coef.erpath,
 coef.probitpath)
 
 S3method("print","gcdnet")
+S3method("print","lla.gcdnet")
 S3method("coef","gcdnet")
+S3method("coef","lla.gcdnet")
 S3method(coef,lspath)
 S3method(coef,erpath)
 S3method(coef,hsvmpath)
@@ -32,10 +34,15 @@ S3method(coef,logitpath)
 S3method(coef,sqsvmpath)
 S3method(coef,probitpath)
 S3method("coef","cv.gcdnet")
+S3method("coef","cv.lla.gcdnet")
 S3method("plot","gcdnet")
+S3method("plot","lla.gcdnet")
 S3method("plot","cv.gcdnet")
+S3method("plot","cv.lla.gcdnet")
 S3method("predict","gcdnet")
+S3method("predict","lla.gcdnet")
 S3method("predict","cv.gcdnet")
+S3method("predict","cv.lla.gcdnet")
 S3method(predict,lspath)
 S3method(predict,erpath)
 S3method(predict,hsvmpath)
