--- a/package/llagcdnet/NAMESPACE
+++ b/package/llagcdnet/NAMESPACE
@@ -37,7 +37,7 @@ S3method(coef,sqsvmpath)
 S3method(coef,probitpath)
 S3method("coef","cv.gcdnet")
 S3method("coef","cv.lla.gcdnet")
-S3method("chef","cv.lla2.gcdnet")
+S3method("coef","cv.lla2.gcdnet")
 S3method("plot","gcdnet")
 S3method("plot","lla.gcdnet")
 S3method("plot","lla2.gcdnet")
