--- a/package/llagcdnet/NAMESPACE
+++ b/package/llagcdnet/NAMESPACE
@@ -8,6 +8,7 @@ cv.sqsvmpath,
 cv.lspath,
 cv.erpath,
 cv.probitpath,
+cv.cprpath,
 predict.gcdnet,
 predict.hsvmpath,
 predict.logitpath,
@@ -15,13 +16,15 @@ predict.sqsvmpath,
 predict.lspath,
 predict.erpath,
 predict.probitpath,
+predict.cprpath,
 coef.gcdnet,
 coef.hsvmpath,
 coef.sqsvmpath,
 coef.logitpath,
 coef.lspath,
 coef.erpath,
-coef.probitpath)
+coef.probitpath,
+coef.cprpath)
 
 S3method("print","gcdnet")
 S3method("print","lla.gcdnet")
@@ -35,6 +38,7 @@ S3method(coef,hsvmpath)
 S3method(coef,logitpath)
 S3method(coef,sqsvmpath)
 S3method(coef,probitpath)
+S3method(coef,cprpath)
 S3method("coef","cv.gcdnet")
 S3method("coef","cv.lla.gcdnet")
 S3method("coef","cv.lla2.gcdnet")
@@ -56,6 +60,7 @@ S3method(predict,hsvmpath)
 S3method(predict,logitpath)
 S3method(predict,sqsvmpath)
 S3method(predict,probitpath)
+S3method(predict,cprpath)
 
 importFrom(utils,head,tail,packageDescription)
 import("Matrix")
@@ -64,4 +69,6 @@ importFrom("graphics", "abline", "axis", "matplot", "points",
 importFrom("grDevices", "rainbow")
 importFrom("methods", "new")
 importFrom("stats", "approx", "coef", "predict", "pnorm", "qnorm")
+importFrom("abind", "abind")
+
 
