--- a/package/llagcdnet/DESCRIPTION
+++ b/package/llagcdnet/DESCRIPTION
@@ -8,7 +8,6 @@ Date: 2021-05-03
 Author: Yi Yang <yi.yang6@mcgill.ca>, He Zhou <zhou1354@umn.edu>, 
         and Hui Zou <hzou@stat.umn.edu>
 Maintainer: He Zhou <zhou1354@umn.edu>
-Depends: Matrix, methods
 Description: A generalized coordinate descent (GCD) algorithm for computing the 
     solution path of the LASSO and elastic net (adaptive) penalized least 
     squares, logistic regression, HHSVM, squared hinge loss SVM, expectile regression, 
@@ -22,4 +21,4 @@ Description: A generalized coordinate descent (GCD) algorithm for computing the
     estimator.
 License: GPL-2
 URL: https://github.umn.edu/zhou1354/llagcdnet
-
+Imports: utils, Matrix, graphics, grDevices, methods, stats, abind 
